[package]
name = "todo-server-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
#hyper = "0.14" # Для сервера
#bytes = "1.1.0"